--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -2031,5 +2031,17 @@
         <target>Add new file</target>
       </segment>
     </unit>
+    <unit id=".t1ICS7" name="collection.remove_item">
+      <segment>
+        <source>collection.remove_item</source>
+        <target>Remove item</target>
+      </segment>
+    </unit>
+    <unit id="0C9.Vmh" name="collection.add_item">
+      <segment>
+        <source>collection.add_item</source>
+        <target>Add item</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
