--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -2180,6 +2180,12 @@
         <source>general.phrase.empty-database</source>
         <target>It looks like the database is empty. Write some content in the Bolt backend, or run the command to add some fixtures (dummy content). </target>
       </segment>
+    </unit>    
+    <unit id="SGlj7K2" name="view_locales.badge_empty">
+      <segment>
+        <source>view_locales.badge_empty</source>
+        <target>Empty</target>
+      </segment>
     </unit>
   </file>
 </xliff>
