--- a/translations/messages.es.xlf
+++ b/translations/messages.es.xlf
@@ -16,7 +16,7 @@
       </notes>
       <segment>
         <source>about.visit_bolt</source>
-        <target>Visita bolt.cm</target>
+        <target>Visita Boltcms.io</target>
       </segment>
     </unit>
     <unit id="UZFanGF" name="about.bolt_documentation">
