--- a/translations/messages.it.xlf
+++ b/translations/messages.it.xlf
@@ -389,7 +389,7 @@
       </notes>
       <segment>
         <source>about.visit_bolt</source>
-        <target>Visita Bolt.cm</target>
+        <target>Visita Boltcms.io</target>
       </segment>
     </unit>
     <unit id="UZFanGF" name="about.bolt_documentation">
