Rename "Last registered" to "Session age" to avoid confusion

--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -1770,7 +1770,7 @@
     <unit id="hXEFV1n" name="listing.title_last_seen">
       <segment>
         <source>listing.title_last_seen</source>
-        <target>Last registered</target>
+        <target>Session age</target>
       </segment>
     </unit>
     <unit id="pn7kE17" name="listing.title_last_ip">
