Display name validation to forbid string of whitespaces only

--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -2193,5 +2193,11 @@
         <target>System Information</target>
       </segment>
     </unit>
+    <unit id="4oq.CNw" name="user.not_valid_display_name">
+      <segment>
+        <source>user.not_valid_display_name</source>
+        <target>Invalid display name</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
