--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -2223,5 +2223,11 @@
         <target>Other Content</target>
       </segment>
     </unit>
+    <unit id="wHOF8eG" name="editfile.target_not_writable">
+      <segment>
+        <source>editfile.target_not_writable</source>
+        <target>Saving is disabled, because the target file is not writable.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
