--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -2229,5 +2229,11 @@
         <target>Saving is disabled, because the target file is not writable.</target>
       </segment>
     </unit>
+    <unit id="v7ZTnja" name="file.delete_success">
+      <segment>
+        <source>file.delete_success</source>
+        <target>File deleted successfully!</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
