Add Event for operations on Content. Clear cache for menu's. Log save after editing content.

--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -2235,5 +2235,11 @@
         <target>This field is translatable</target>
       </segment>
     </unit>
+    <unit id="qqpGLJl" name="label.content">
+      <segment>
+        <source>label.content</source>
+        <target>Content</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
