Add "Create new …" button on listings, because otherwise you can't create new records in that contenttype.

--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -2241,5 +2241,11 @@
         <target>Content</target>
       </segment>
     </unit>
+    <unit id="IWbf2by" name="listing.title_filterby">
+      <segment>
+        <source>listing.title_filterby</source>
+        <target>Filter by</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
