--- a/translations/messages.nl.xlf
+++ b/translations/messages.nl.xlf
@@ -1728,5 +1728,29 @@
         <target>Van slot</target>
       </segment>
     </unit>
+    <unit id="IWbf2by" name="listing.title_filterby">
+      <segment>
+        <source>listing.title_filterby</source>
+        <target>Filter op</target>
+      </segment>
+    </unit>
+    <unit id="WeJxw6Z" name="action.update_all">
+      <segment>
+        <source>action.update_all</source>
+        <target>Alles bijwerken</target>
+      </segment>
+    </unit>
+    <unit id="AMxTho9" name="pager.previous">
+      <segment>
+        <source>pager.previous</source>
+        <target>Vorige</target>
+      </segment>
+    </unit>
+    <unit id="L_YQKUn" name="pager.next">
+      <segment>
+        <source>pager.next</source>
+        <target>Volgende</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
