--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -2184,7 +2184,7 @@
     <unit id="WeJxw6Z" name="action.update_all">
       <segment>
         <source>action.update_all</source>
-        <target>Update all</target>
+        <target>Apply to all</target>
       </segment>
     </unit>
     <unit id="QVRwwK4" name="about.system_info">
@@ -2252,11 +2252,23 @@
         <source>file.delete_confirm</source>
         <target>Are you sure you wish to delete this file?</target>
       </segment>
-    </unit>        
+    </unit>
     <unit id="IWbf2by" name="listing.title_filterby">
       <segment>
         <source>listing.title_filterby</source>
         <target>Filter by</target>
+      </segment>
+    </unit>
+    <unit id="Zssh7In" name="content.status_changed_successfully">
+      <segment>
+        <source>content.status_changed_successfully</source>
+        <target>Status changed successfully</target>
+      </segment>
+    </unit>
+    <unit id="GOhQBY9" name="content.deleted_successfully">
+      <segment>
+        <source>content.deleted_successfully</source>
+        <target>Content deleted successfully</target>
       </segment>
     </unit>
   </file>
