Add Labels for statuses

--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -2271,5 +2271,35 @@
         <target>Content deleted successfully</target>
       </segment>
     </unit>
+    <unit id=".I3mIHo" name="label.current_status">
+      <segment>
+        <source>label.current_status</source>
+        <target>Current status</target>
+      </segment>
+    </unit>
+    <unit id="utGAKaQ" name="status.published">
+      <segment>
+        <source>status.published</source>
+        <target>Published</target>
+      </segment>
+    </unit>
+    <unit id="utGAKaW" name="status.draft">
+      <segment>
+        <source>status.draft</source>
+        <target>Draft</target>
+      </segment>
+    </unit>
+    <unit id="utGAKaE" name="status.timed">
+      <segment>
+        <source>status.timed</source>
+        <target>Timed</target>
+      </segment>
+    </unit>
+    <unit id="utGAKaR" name="status.held">
+      <segment>
+        <source>status.held</source>
+        <target>Held</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
