--- a/translations/messages.de.xlf
+++ b/translations/messages.de.xlf
@@ -241,10 +241,10 @@
         <target>Ansehen</target>
       </segment>
     </unit>
-    <unit id="SDVQEir" name="title.save_changes">
+    <unit id="SDVQEir" name="title.primary_actions">
       <segment>
-        <source>title.save_changes</source>
-        <target>Änderungen speichern</target>
+        <source>title.primary_actions</source>
+        <target>Primäre Aktionen</target>
       </segment>
     </unit>
     <unit id="dQIY7_J" name="action.preview">
