--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -2256,7 +2256,7 @@
     <unit id="IWbf2by" name="listing.title_filterby">
       <segment>
         <source>listing.title_filterby</source>
-        <target>Filter by</target>
+        <target>Search / Filter by</target>
       </segment>
     </unit>
     <unit id="Zssh7In" name="content.status_changed_successfully">
@@ -2317,6 +2317,18 @@
       <segment>
         <source>upload.max_size</source>
         <target>Maximum upload size</target>
+      </segment>
+    </unit>
+    <unit id="O_m7mx1" name="listing.placeholder_search">
+      <segment>
+        <source>listing.placeholder_search</source>
+        <target>Search for keyword …</target>
+      </segment>
+    </unit>
+    <unit id="munFS0n" name="title.filtered_by">
+      <segment>
+        <source>title.filtered_by</source>
+        <target><![CDATA[All content, filtered by <em>'%filter%'</em>.]]></target>
       </segment>
     </unit>
   </file>
